# llvm-instrumentation-pass

./: CMakeLists.txt  README.md  run.sh
example/: instrumented-main.ll  main  main.cpp  main.ll
instrumentFunction/: CMakeLists.txt
instrumentFunction/include/: InstrumentFunction.h
instrumentFunction/src/: InstrumentFunction.cpp  myFunction.cpp
